[tool.poetry]
name = "aula16-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Rebeca <rebecavitoriarangel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
